# Practicas_UCO

./: README.md
Segundo/Practicas_ED/P3-avl_tree/src/: CHANGELOG.txt  CMakeLists.txt  DO_NOT_MODIFY.TXT  avltree.hpp  avltree_imp.hpp  test_avltree.cpp  test_bstree.cpp
Segundo/Practicas_ED/P3-avl_tree/src/tests_bstree/: 03  04  10
Segundo/Practicas_ED/P4-alphabet_soup/: CHANGELOG.txt  CMakeLists.txt  DO_NOT_MODIFY.TXT  alphabet_soup.cpp  alphabet_soup.hpp  alphabet_soup_solver.cpp  alphabet_soup_solver.hpp  run_tests.sh  test_alphabet_soup_solver.cpp  test_trie.cpp  test_trie_node.cpp  trie.cpp  trie.hpp  trie_node.cpp  trie_node.hpp
Segundo/Practicas_ED/P4-alphabet_soup/tests_retrieve/: 00  01  10
Segundo/Practicas_ED/P4-alphabet_soup/tests_trie/: 00  01  03  04  04_2  04_3  05  06  07  08
Segundo/Practicas_ED/P4-alphabet_soup/tests_trie_fold_unfold/: 07  08  09  10
Segundo/Practicas_ED/P4-alphabet_soup/tests_trie_node/: 00  01  02  04
Segundo/Practicas_ED/P4-alphabet_soup/tests_trie_node_fold_unfold/: 05  06  07
Segundo/Practicas_ED/P5-dos_detector-open_addressing/: CMakeLists.txt  DO_NOT_MODIFY.TXT  dos_detector.cpp  dos_detector.hpp  hash.cpp  hash.hpp  hash_table.hpp  hash_table_entry.hpp  hash_table_entry_imp.hpp  hash_table_imp.hpp  ip_utils.cpp  ip_utils.hpp  system.cpp  system.hpp  test_dos_detector.cpp  test_hash_function.cpp  test_hash_table.cpp  test_ip_utils.cpp
Segundo/Practicas_ED/P5-dos_detector-open_addressing/build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  test_dos_detector  test_hash_f  test_hash_table  test_ip_utils
Segundo/Practicas_ED/P5-dos_detector-open_addressing/tests_dos_detector/: 00  01
Segundo/Practicas_ED/P5-dos_detector-open_addressing/tests_hash_function_dh/: 00  01  02
Segundo/Practicas_ED/P5-dos_detector-open_addressing/tests_hash_function_lp/: 00  01  02  03  04
Segundo/Practicas_ED/P5-dos_detector-open_addressing/tests_hash_function_qp/: 00  01  02
Segundo/Practicas_ED/P5-dos_detector-open_addressing/tests_hash_function_rh/: 00  01  02
Segundo/Practicas_ED/P5-dos_detector-open_addressing/tests_hash_function_rp/: 00  01  02
Segundo/Practicas_ED/P5-dos_detector-open_addressing/tests_hash_table/: 00  01  02  03  04  05  06
Segundo/Practicas_ED/P5-dos_detector-open_addressing/tests_ip_utils/: 00  01  02  03  04  06  07  08  09  10  11
Segundo/Practicas_ED/P6-graph_traversals/: CHANGELOG.TXT  CMakeLists.txt  DO_NOT_MODIFY.TXT  city.cpp  city.hpp  disjointsets.hpp  graph_traversals.hpp  item.hpp  kruskal_algorithm.hpp  matrix.cpp  matrix.hpp  prim_algorithm.hpp  test_create_graph.cpp  test_kruskal.cpp  test_prim.cpp  test_traversals.cpp  test_wgraph.cpp  wgraph.hpp  wgraph_imp.hpp
Segundo/Practicas_ED/P6-graph_traversals/tests_create_graph/: 00  01  02
Segundo/Practicas_ED/P6-graph_traversals/tests_kruskal/: 00  01  02  03
Segundo/Practicas_ED/P6-graph_traversals/tests_prim/: 00  01  02  03
Segundo/Practicas_ED/P6-graph_traversals/tests_traversals/: 00  01  02  03
Segundo/Practicas_ED/P6-graph_traversals/tests_wgraph/: 00  01  04  05
Segundo/Practicas_PAS/Practica1_Bash/: comillas.sh  holaMundo.sh  parametros.sh
Segundo/Practicas_POO/Practica1/: guess.cc  hello-world.cc  ns.cc
Segundo/Practicas_POO/Practica2/: 49W.txt  Makefile  crupier.h  crupier_unittest.cc  jugador-ppal.cc  jugador.cc  jugador.h  my_crupier_unittest.cc  my_jugador_unittest.cc  persona_unittest.cc
Segundo/Practicas_POO/Practica3/: Makefile  crupier.cc  jugador.cc  ruleta.cc  ruleta.h
Segundo/Practicas_POO/Practica5/: dados.cc  dados.h  ejercicio3.cc  ejercicio4.cc  ejercicio5.cc  ejercicio6.cc  ejercicio7.cc  jugador.h  jugadores.txt  p5
Tercero/Practicas_ISSBC/Practica4/: hamburguer.owl  pizza.owl
Tercero/Practicas_ISSBC/examen/: appTableCalifications.py
Tercero/Practicas_ISSBC/examenProtégé/: catalog-v001.xml  examenMayo.owl  rdflibExamenMayo.py  sparqlExamenMayo.py
Tercero/Practicas_ISSBC/examenPyQT5/: controllerTableCalifications.py  modelTableCalifications.py  (+1 more)
(+348 files in other folders)
